# py-utils

./: .gitignore  README.md  dump.txt  functions_greetings.py  lists.py  lists_tuples.py  numbers_1.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  strings.py  zen.py
.github/workflows/: github-actions-basic.yml
.run/: All Tests.run.xml
py_learning/: __init__.py
py_learning/core/: __init__.py  classes.py  classes_in_action.py  exceptions.py  functions_imports.py  input.py  lists_working_with.py  utils_standard_lib.py
py_learning/math/: scipy_distributions.py
py_learning/processing/: import_module.py  json_dumps.py
py_learning/spark/: spark_local.py
py_learning/structure/: pprinter.py
py_utils_knaier/: __init__.py
py_utils_knaier/core/: async_example.py  datetime_example.py  dictionaries.py  if.py  logs.py  strings.py  while.py
py_utils_knaier/math/: numpy_examples.py  stats_norm.py
py_utils_knaier/processing/: __init__.py  files.py  json_read.py
py_utils_knaier/structure/: __init__.py
py_utils_knaier/utils/: date_utils.py
resources/: digits.txt  sample.json
tests/: __init__.py  test_example_pytest.py  test_example_unittest.py
